# research-contributions

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
DiNTS/: README.md  auto_unet.py  code_pool.py  config.yaml  download_msd_datasets.py  ensemble.py  ensemble_multi-gpu.py  infer.sh  infer_multi-gpu.py  operations.py  run_ensemble.sh  run_infer_multi-gpu.sh  run_inference.sh  run_install_monai.sh  run_train.sh  run_train_4gpu.sh  run_train_multi-gpu.sh  search.sh  search_multi-gpu.py  train.sh  train_multi-gpu.py  transforms.py  utils.py
ICON/: LICENSE  pyproject.toml  requirements.txt  setup.cfg
ICON/icon/: itk_wrapper.py  network_wrappers.py
ICON/icon_registration/: __init__.py  config.py  data.py  itk_wrapper.py  losses.py  network_wrappers.py  networks.py  registration_module.py  similarity.py  test_utils.py  train.py  visualize.py
ICON/icon_registration/pretrained_models/: HCP_brain.py  OAI_knees.py  __init__.py  lung_ct.py
ICON/test/: test_2d_registration_train.py  test_brain_itk.py  test_imports.py  test_knee_itk.py  test_knee_registration.py  test_losses.py  test_lung_itk.py  test_lung_registration.py
MedSyn/: LICENSE.md  README.md
SkullRec/: README.md  cranialDefects.py  facialDefects.py  monaiSkull.py
SwinMM/: INSTALL.md  README.md  TRAINING.md  requirements.txt
auto3dseg/: README.md  metadata.json
coplenet-pneumonia-lesion-segmentation/: README.md  coplenet.py  run_inference.py  test_coplenet.py
dints/: README.md  train_multi-gpu.py  utils.py
lamp-automated-model-parallelism/: README.md  train.py  (+3 more)
(+390 files in other folders)
